@@ -2003,6 +2003,30 @@ const run = (): void => {
 
   {
     const tmp = mkTmp();
+    const ociDir = path.join(tmp, "oci_layout_case_collision");
+    fs.mkdirSync(path.join(ociDir, "blobs", "sha256"), { recursive: true });
+    fs.writeFileSync(path.join(ociDir, "oci-layout"), "{\"imageLayoutVersion\":\"1.0.0\"}\n", "utf8");
+    fs.writeFileSync(
+      path.join(ociDir, "index.json"),
+      JSON.stringify({
+        schemaVersion: 2,
+        manifests: [{ mediaType: "x", digest: "sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" }],
+      }),
+      "utf8"
+    );
+    fs.writeFileSync(path.join(ociDir, "blobs", "sha256", "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"), "x", "utf8");
+    const capture = captureTreeV0(ociDir, limits) as any;
+    capture.entries = capture.entries.concat([
+      { path: "blobs/sha256/Alpha", kind: "file", bytes: 1, digest: "sha256:a" },
+      { path: "blobs/sha256/alpha", kind: "file", bytes: 1, digest: "sha256:b" },
+    ]);
+    const res = runArtifactAdapterV1({ selection: "container", enabledPlugins: [], inputPath: ociDir, capture });
+    assert(!res.ok, "container adapter should fail closed for explicit container directory with case-colliding entry paths");
+    assertEq(res.failCode, "CONTAINER_FORMAT_MISMATCH", "expected CONTAINER_FORMAT_MISMATCH for case-colliding container directory entry paths");
+  }
+
+  {
+    const tmp = mkTmp();
     const ociDir = path.join(tmp, "oci_layout_digest_mismatch");
     fs.mkdirSync(path.join(ociDir, "blobs", "sha256"), { recursive: true });
     fs.writeFileSync(path.join(ociDir, "oci-layout"), "{\"imageLayoutVersion\":\"1.0.0\"}\n", "utf8");
